--- a/.gitignore
+++ b/.gitignore
@@ -77,3 +77,4 @@ WorldsBestPaperBallThrower/Packages/packages-lock.json
 WorldsBestPaperBallThrower/.vsconfig
 WorldsBestPaperBallThrower/Temp/Burst/burst-aotz72t5b4y.qii/lib_burst_generated_part_89425a97f3f500fa810ad03f0c382542.gbc
 WorldsBestPaperBallThrower/Temp/
+WorldsBestPaperBallThrower/obj/
